# agentic-006419e6

./: .env.example  index.html  pyproject.toml  requirements.txt  test_engine.py
api/: __init__.py  main.py
examples/: api_client.py  basic_usage.py
insight_agent/: __init__.py  agents.py  column_mapper.py  engine.py  graph.py  schemas.py
